--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-<<<<<<< Updated upstream
+
 h1 {
   background-color: pink
-=======
-h1 {
-  background-color: pink
->>>>>>> Stashed changes
+}
+
+nav {
+	background-color: blue
 }
