--- a/style.css
+++ b/style.css
@@ -1,61 +1,36 @@
 * {
-	margin: 0;
-	padding: 0;
+margin: 0;
+padding: 0;
+}
+
+header {
+	background-color: #fff;
 }
 
 .logo {
+	padding-left: 50px;
+	padding-top: 30px;
 	border: none;
 	grid-area: left;
 }
 
-.wrapper {
-	max-width: 2560px;
-	display: grid;
-  	grid-gap: 10px;
-  	grid-template-columns: 1fr 1fr;
-  
-  	grid-template-areas:
-    "header header"
-    "main main"
-    "img-me about"
-    "footer footer";
+nav {
+	display: flex;
+	background-color: #fff;
 }
 
-/*overskrider ovenstående. Altid lav mobiludgave først*/
-
-.wrapper > * {
-    border: 2px solid #f08c00;
-    background-color: #ffec99;
-    border-radius: 5px;
-    padding: 10px;
+nav li {
+	flex: 3;
 }
 
-header {
-  grid-area: header;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex; 
-    flex-direction: row;
-    justify-content: flex-end;
-    flex: 3;
-}
-
-nav ul li {
+ul li {
 	list-style: none;
 	display: inline-block;
 	line-height: 50px;
 	border: 1px solid #000;
-	margin: 10px;
 }
 
-nav ul li a {
+ul li a {
 	font-size: 16px;
 	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
 	font-family: arial;
@@ -64,32 +39,19 @@ nav ul li a {
 	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
 }
 
-nav ul li a:hover {
+ul li a:hover {
 	background-color: #FCE9F3;
 }
 
-main {
-	grid-area: main;
+body {
+	background-color: pink;
 }
 
-main.welcomepicture {
-	background-image: url(hund.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	min-height: 300px;
-}
-
-.img-me {
-	grid-area: img-me;
-}
-
-.about {
-	grid-area: about;
-}
-
-footer {
-  grid-area: footer;
-}
-
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 100%;
+  /*Fr = fraksion, hvis en fraksion er en størrelse, så er den næste dobbelt så stor. SKulle det omskrives til %, ville det være 25% og 75%*/
+  grid-template-areas:
+"logo menu"
 
