--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@
 	max-width: 2560px;
 	display: grid;
   	grid-gap: 10px;
-  	grid-template-columns: 1fr 1fr;
+  	grid-template-columns: 1fr 1fr; 
   
   	grid-template-areas:
     "header header"
     "main main"
     "img-me about"
+    "kompetencer kompetencer"
+    "portfolio portfolio"
     "footer footer";
 }
 
@@ -108,8 +110,15 @@ ul li a:hover {
 }
 
 .img-me {
-	grid-area: img-me;
+	grid-area: img-me;	
+}
 
+.about h1 {
+	font-size: 50px;
+}
+
+.about h2 {
+	font-size: 45px;
 }
 
 .about {
@@ -119,8 +128,48 @@ ul li a:hover {
 	text-align: center;
 }
 
+.kompetencer {
+	grid-area: kompetencer;
+}
+
+.portfolio {
+	grid-area: portfolio;
+}
+
+
 footer {
   grid-area: footer;
 }
 
 
+/*Ny side - portfolio*/
+
+body {
+	width: 100%
+	height: 100%
+	margin: 0px;
+	padding: 0px;
+}
+
+.picture-grid {
+	display: grid;
+	grid-template-columns: repeat (auto-fill, minmax (240px. 1fr));
+	justify-content: center;
+	gridgab: 5px;
+	grid-row-gap: 0px;
+}
+
+.gridbox {
+	display: inline-block;
+	width: 320px;
+	height: 240;
+	margin: 1em;
+}
+
+
+.pictures { 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  align-items: stretch;
+  }
