--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 	padding: 0;
 }
 
+/*mobile device*/
+
+/*tablet*/
+
+/*desktop*/
 .logo {
 	border: none;
 	grid-area: left;
@@ -22,8 +27,6 @@
     "portfolio portfolio"
     "footer footer";
 }
-
-/*overskrider ovenstående. Altid lav mobiludgave først*/
 
 .wrapper > * {
     border: 2px solid #f08c00;
@@ -72,19 +75,25 @@ nav ul li a:hover {
 
 main {
 	grid-area: main;
-	font-family: poppins;
-	color: #FCE9F3;
-	font-size: 30px;
-	font-weight: bold;
-	text-align: center;
 }
 
 main.welcomepicture {
-	background-image: url(hund.jpg);
+	background-image: url(skrivebord2.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	min-height: 600px;
+}
+
+.welcometext {
+	font-family: poppins;
+	color: #482980;
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
+	position: absolute;
+  	top: 70%;
+  	left: 50%;
 }
 
 main ul li {
@@ -132,44 +141,98 @@ ul li a:hover {
 	grid-area: kompetencer;
 }
 
+.pinkbox {
+	width: 95%;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
+}
+
+.pinkbox h1 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 50px;
+}
+
+.icons {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-column-gap: 5%;
+	justify-content: center;
+}
+
+.icons img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.icons p {
+	display: grid;
+	margin: 0 auto;
+}
+
 .portfolio {
 	grid-area: portfolio;
 }
 
+.portfolio h1 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 50px;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: auto auto auto auto auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	justify-content: center;
+}
+
+.gallery img {
+	display: grid;
+	margin: 0 auto;
+}
 
 footer {
   grid-area: footer;
 }
 
+footer h1 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 50px;
+}
+
+footer h2 {
+	font-family: poppins;
+	text-align: center;
+}
+
+
+
+
+
 
 /*Ny side - portfolio*/
 
-body {
-	width: 100%
-	height: 100%
-	margin: 0px;
-	padding: 0px;
+.portfolio-page h1 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 70px;
+	margin-bottom: 50px;
 }
 
-.picture-grid {
+.gallery {
 	display: grid;
-	grid-template-columns: repeat (auto-fill, minmax (240px. 1fr));
+	grid-template-columns: auto auto auto auto auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 10px;
 	justify-content: center;
-	gridgab: 5px;
-	grid-row-gap: 0px;
 }
 
-.gridbox {
-	display: inline-block;
-	width: 320px;
-	height: 240;
-	margin: 1em;
+.gallery img {
+	display: grid;
+	margin: 0 auto;
 }
-
-
-.pictures { 
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 20px;
-  align-items: stretch;
-  }
