--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 .logo {
 	border: none;
 	grid-area: left;
+	margin-left: 20px;
+	margin-top: 10px;
 }
 
 .wrapper {
@@ -29,8 +31,8 @@
 }
 
 .wrapper > * {
-    border: 2px solid #f08c00;
-    background-color: #ffec99;
+    border: 2px solid #000000;
+    background-color: #ffffff;
     border-radius: 5px;
     padding: 10px;
 }
@@ -122,6 +124,11 @@ ul li a:hover {
 	grid-area: img-me;	
 }
 
+.logo-me {
+	margin: 0 auto;
+	align-items: center;
+}
+
 .about h1 {
 	font-size: 50px;
 }
@@ -135,6 +142,7 @@ ul li a:hover {
 	font-family: poppins;
 	color: black;
 	text-align: center;
+	padding: 30px;
 }
 
 .kompetencer {
@@ -153,6 +161,7 @@ ul li a:hover {
 	font-family: poppins;
 	text-align: center;
 	font-size: 50px;
+	margin-bottom: 30px;
 }
 
 .icons {
@@ -170,6 +179,8 @@ ul li a:hover {
 .icons p {
 	display: grid;
 	margin: 0 auto;
+	font-family: poppins;
+	text-align: center;
 }
 
 .portfolio {
@@ -208,7 +219,33 @@ footer h1 {
 footer h2 {
 	font-family: poppins;
 	text-align: center;
+	margin-bottom: 20px;
 }
+
+.oplysninger {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-column-gap: 5%;
+		
+}
+
+.kontaktoplysninger {
+	justify-content: left;
+}
+
+.socialmedia {
+	justify-content: right;
+}
+
+.oplysninger p {
+	display: grid;
+	margin: 0 auto;
+	font-family: poppins;
+	text-align: left;
+}
+
+
+	
 
 
 
