--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ nav ul {
     display: flex; 
     flex-direction: row;
     justify-content: flex-end;
-    flex: 3;
 }
 
 nav ul li {
@@ -131,6 +130,15 @@ ul li a:hover {
 
 .about {
 	grid-area: about;
+}
+
+.pinkbox2 {
+	width: 95%;
+	height: 650px;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
 }
 
 .about h1 {
@@ -216,6 +224,15 @@ ul li a:hover {
 	margin: 0 auto;
 }
 
+.pinkbox1 {
+	width: 95%;
+	height: 300px;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
+}
+
 footer {
   grid-area: footer;
 }
@@ -277,6 +294,7 @@ footer h2 {
 	grid-column-gap: 20px;
 	grid-row-gap: 10px;
 	justify-content: center;
+	margin-bottom: 70px;
 }
 
 .gallery img {
