--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
 
 /*mobile device*/
 
-/*tablet*/
 
-/*desktop*/
 .logo {
 	border: none;
 	grid-area: left;
@@ -299,4 +297,6 @@ footer h2 {
 .gallery img {
 	display: grid;
 	margin: 0 auto;
+}
+
 }
