--- a/new.css
+++ b/new.css
@@ -18,3 +18,199 @@ header {
   background-color: #FCE9F3;
 }
 
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex; 
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+nav ul li {
+	list-style: none;
+	display: inline-block;
+	line-height: 50px;
+	border: 1px solid #000;
+	margin: 10px;
+}
+
+nav ul li a {
+	font-size: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
+	font-family: poppins;
+	color: black;
+	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
+}
+
+.logo-me {
+	margin: 0 auto;
+	align-items: center;
+}
+
+main.welcomepicture {
+	background-image: url(skrivebord2.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	min-height: 250px;
+}
+
+.welcometext {
+	font-family: poppins;
+	color: #FE2FAC;
+	font-weight: bold;
+	text-align: center;
+	position: absolute;
+	top: 30%;
+}
+
+main ul li {
+	display: none;
+
+}
+
+.wrapper {
+	max-width: 2560px;
+	display: grid;
+  	grid-gap: 10px;
+  	grid-template-columns: 1fr 1fr; 
+  
+  	grid-template-areas:
+    "img-me img-me"
+    "about about"
+    "kompetencer kompetencer";
+}
+
+.wrapper > * {
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.img-me {
+	grid-area: img-me;	
+}
+
+.logo-me {
+	width: 100%;
+	margin: 0 auto;
+	align-items: center;
+}
+
+.about {
+	grid-area: about;
+}
+
+.pinkbox2 {
+	width: 95%;
+	height: 90%;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
+}
+
+.about h1 {
+	font-family: poppins;
+	text-align: center;
+	font-weight: bold;
+}
+
+.about h2 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 20px;
+}
+
+.about p {
+	font-family: poppins;
+	color: black;
+	text-align: center;
+	padding: 10px;
+}
+
+.kompetencer {
+	grid-area: kompetencer;
+}
+
+.pinkbox {
+	width: 95%;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
+}
+
+.pinkbox h1 {
+	font-family: poppins;
+	text-align: center;
+	margin-bottom: 50px;
+	margin-top: 30px;
+}
+
+.icons {
+	display: grid;
+	grid-template-rows: auto auto;
+	grid-column-gap: 5%;
+	justify-content: center;
+}
+
+.icons img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.icons p {
+	display: grid;
+	margin: 0 auto;
+	font-family: poppins;
+	text-align: center;
+	padding-bottom: 30px;
+	margin-top: 20px;
+	max-width: 300px;
+}
+
+
+
+
+
+
+/*.pinkbox {
+	width: 95%;
+	height: 500px;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;
+}
+
+.pinkbox h1 {
+	font-family: poppins;
+	text-align: center;
+	font-size: 50px;
+	margin-bottom: 50px;
+	margin-top: 30px;
+}
+
+.icons {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-column-gap: 5%;
+	justify-content: center;
+}
+
+.icons img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.icons p {
+	display: grid;
+	margin: 0 auto;
+	font-family: poppins;
+	text-align: center;
+	padding-bottom: 30px;
+	margin-top: 20px;
+}
