--- a/new.css
+++ b/new.css
@@ -76,17 +76,18 @@ main ul li {
 	max-width: 2560px;
 	display: grid;
   	grid-gap: 10px;
-  	grid-template-columns: 1fr 1fr; 
+  	grid-template-columns: 100%; 
   
   	grid-template-areas:
-    "img-me img-me"
-    "about about"
-    "kompetencer kompetencer";
+    "img-me"
+    "about"
+    "kompetencer";
 }
 
 .wrapper > * {
     border-radius: 5px;
     padding: 10px;
+    background-color: #FFFFFF;
 }
 
 .img-me {
@@ -104,11 +105,10 @@ main ul li {
 }
 
 .pinkbox2 {
-	width: 95%;
-	height: 90%;
+	width: 100%;
+	height: 100%;
 	background-color: #FCE9F3;
 	margin: auto;
-	padding: 20px;
 	align-content: center;
 }
 
@@ -136,10 +136,9 @@ main ul li {
 }
 
 .pinkbox {
-	width: 95%;
+	width: 100%;
 	background-color: #FCE9F3;
 	margin: auto;
-	padding: 20px;
 	align-content: center;
 }
 
@@ -152,7 +151,6 @@ main ul li {
 
 .icons {
 	display: grid;
-	grid-template-rows: auto auto;
 	grid-column-gap: 5%;
 	justify-content: center;
 }
@@ -172,45 +170,46 @@ main ul li {
 	max-width: 300px;
 }
 
-
-
-
-
-
-/*.pinkbox {
-	width: 95%;
-	height: 500px;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
+.portfolio {
+	justify-content: center;
+	align-items: center;
 }
 
-.pinkbox h1 {
+.portfolio h1 {
 	font-family: poppins;
 	text-align: center;
-	font-size: 50px;
-	margin-bottom: 50px;
-	margin-top: 30px;
 }
 
-.icons {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-column-gap: 5%;
+.gallery {
+	display: flex;
+	flex-direction: column;
+	grid-template-columns: auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
 	justify-content: center;
 }
 
-.icons img {
+.gallery img {
 	display: grid;
 	margin: 0 auto;
 }
 
-.icons p {
-	display: grid;
-	margin: 0 auto;
+.pinkbox1 {
+	width: 95%;
+	height: 300px;
+	background-color: #FCE9F3;
+	margin: auto;
+	padding: 20px;
+	align-content: center;	
+	}
+
+footer h1 {
 	font-family: poppins;
 	text-align: center;
-	padding-bottom: 30px;
-	margin-top: 20px;
 }
+
+footer h2 {
+	font-family: poppins;
+	text-align: center;
+}
+
