--- a/new.css
+++ b/new.css
@@ -7,8 +7,12 @@
 
 .logo {
 	border: none;
-	margin-left: 20px;
+	margin-left: 10px;
 	margin-top: 10px;
+}
+
+.logo-bea {
+	width: 50%;
 }
 
 header {
@@ -105,7 +109,7 @@ main ul li {
 }
 
 .pinkbox2 {
-	width: 100%;
+ 	width: 100%;
 	height: 100%;
 	background-color: #FCE9F3;
 	margin: auto;
@@ -115,20 +119,18 @@ main ul li {
 .about h1 {
 	font-family: poppins;
 	text-align: center;
-	font-weight: bold;
 }
 
 .about h2 {
 	font-family: poppins;
 	text-align: center;
-	font-size: 20px;
 }
 
 .about p {
 	font-family: poppins;
 	color: black;
 	text-align: center;
-	padding: 10px;
+	padding: 30px;
 }
 
 .kompetencer {
@@ -180,6 +182,19 @@ main ul li {
 	text-align: center;
 }
 
+.gallery {
+	display: flex;
+	flex-direction: column;
+	grid-template-columns: auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	justify-content: center;
+}
+
+.gallery img {
+	display: grid;
+	margin: 0 auto;
+}
 
 .gallery img {
 	display: grid;
@@ -191,12 +206,12 @@ main ul li {
 	background-color: #FCE9F3;
 	margin: auto;
 	align-content: center;	
+	padding:10px;
 	}
 
 footer h1 {
 	font-family: poppins;
 	text-align: center;
-
 }
 
 footer h2 {
@@ -218,318 +233,43 @@ footer h2 {
 	text-align: center;
 }
 
-.gallery {
-	display: flex;
-	flex-direction: column;
-	grid-template-columns: auto;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	justify-content: center;
-}
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
-
-
 
 /*Tablet device*/
 @media only screen and (min-width: 400px) {
 
-* {
-	margin: 0;
-	padding: 0;
-}
-
-.logo {
-	border: none;
-	margin-left: 20px;
-	margin-top: 10px;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #FCE9F3;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex; 
-    flex-direction: row;
-    justify-content: flex-end;
-}
-
-nav ul li {
-	list-style: none;
-	display: inline-block;
-	line-height: 50px;
-	border: 1px solid #000;
-	margin: 10px;
-}
-
-nav ul li a {
-	font-size: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
-	font-family: poppins;
-	color: black;
-	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
-}
-
-.logo-me {
-	margin: 0 auto;
-	align-items: center;
-}
-
-main.welcomepicture {
-	background-image: url(skrivebord2.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	min-height: 250px;
-}
-
 .welcometext {
-	font-family: poppins;
-	color: #FE2FAC;
-	font-weight: bold;
-	text-align: center;
-	position: absolute;
 	top: 30%;
-	left: 50%;
+	left: 30%;
 }
 
-main ul li {
-	display: none;
-
-}
-
-.wrapper {
-	max-width: 2560px;
-	display: grid;
-  	grid-gap: 10px;
-  	grid-template-columns: 100%; 
-  
-  	grid-template-areas:
-    "img-me"
-    "about"
-    "kompetencer";
-}
-
-.wrapper > * {
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #FFFFFF;
-}
-
-.img-me {
-	grid-area: img-me;	
-}
-
-.logo-me {
-	width: 100%;
-	margin: 0 auto;
-	align-items: center;
-}
-
-.about {
-	grid-area: about;
-}
-
-.pinkbox2 {
-	width: 100%;
-	height: 100%;
-	background-color: #FCE9F3;
-	margin: auto;
-	align-content: center;
-}
-
-.about h1 {
-	font-family: poppins;
-	text-align: center;
-	font-weight: bold;
-}
-
-.about h2 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 20px;
-}
-
-.about p {
-	font-family: poppins;
-	color: black;
-	text-align: center;
-	padding: 10px;
-}
-
-.kompetencer {
-	grid-area: kompetencer;
-}
-
-.pinkbox {
-	width: 100%;
-	background-color: #FCE9F3;
-	margin: auto;
-	align-content: center;
-}
-
-.pinkbox h1 {
-	font-family: poppins;
-	text-align: center;
-	margin-bottom: 50px;
-	margin-top: 30px;
-}
-
-.icons {
-	display: grid;
-	grid-column-gap: 5%;
-	justify-content: center;
-}
-
-.icons img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.icons p {
-	display: grid;
-	margin: 0 auto;
-	font-family: poppins;
-	text-align: center;
-	padding-bottom: 30px;
-	margin-top: 20px;
-	max-width: 300px;
-}
-
-.portfolio {
-	justify-content: center;
-	align-items: center;
-}
-
-.portfolio h1 {
-	font-family: poppins;
-	text-align: center;
-}
-
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.pinkbox1 {
-	width: 100%;
-	background-color: #FCE9F3;
-	margin: auto;
-	align-content: center;	
-	}
-
-footer h1 {
-	font-family: poppins;
-	text-align: center;
-
-}
-
-footer h2 {
-	font-family: poppins;
-	text-align: center;
-}
-
-.oplysninger p {
-	display: grid;
-	margin: 0 auto;
-	font-family: poppins;
-	text-align: center;
-}
-
-/*portfolio page tablet device*/
-
-.portfolio-page h1 {
-	font-family: poppins;
-	text-align: center;
-}
-
-.gallery {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
 }
 
 
 /*Desktop device*/
 @media only screen and (min-width: 800px) {
 
-* {
-	margin: 0;
-	padding: 0;
-}
-
-.logo {
-	border: none;
-	margin-left: 20px;
-	margin-top: 10px;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #FCE9F3;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex; 
-    flex-direction: row;
-    justify-content: flex-end;
-}
-
-nav ul li {
-	list-style: none;
-	display: inline-block;
-	line-height: 50px;
-	border: 1px solid #000;
-	margin: 10px;
+.logo-bea {
+	width: 100%;
 }
 
 nav ul li a {
 	font-size: 16px;
-	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
-	font-family: poppins;
-	color: black;
 	padding: 0 20px;
-	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
+	
 }
 
 nav ul li a:hover {
 	background-color: #E2DEF0;
 }
 
-.logo-me {
-	margin: 0 auto;
-	align-items: center;
+.wrapper {
+  	grid-template-columns: 1fr 1fr; 
+  	grid-template-areas:
+    "img-me about"
+    "kompetencer kompetencer";
 }
 
 main.welcomepicture {
-	background-image: url(skrivebord2.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
 	min-height: 600px;
 }
 
@@ -540,8 +280,8 @@ main.welcomepicture {
 	font-weight: bold;
 	text-align: center;
 	position: absolute;
-	top: 50%;
-	left: 50%;
+  	top: 55%;
+  	left: 50%;
 }
 
 main ul li {
@@ -566,176 +306,48 @@ ul li a:hover {
 	background-color: #FCE9F3;
 }
 
-.wrapper {
-	max-width: 2560px;
-	display: grid;
-  	grid-gap: 10px;
-  	grid-template-columns: 1fr 1fr; 
-  
-  	grid-template-areas:
-    "img-me about"
-    "kompetencer kompetencer";
-}
-
-.wrapper > * {
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #FFFFFF;
-}
 
 .img-me {
 	grid-area: img-me;	
 }
 
-.logo-me {
-	width: 100%;
-	margin: 0 auto;
-	align-items: center;
-}
-
 .about {
-	grid-area: about;
-}
-
-.pinkbox2 {
-	width: 100%;
-	height: 100%;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
-}
-
-.about h1 {
-	font-size: 50px;
-	font-family: poppins;
-	text-align: center;
-	font-weight: bold;
-}
-
-.about h2 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 30px;
-}
-
-.about p {
-	font-family: poppins;
-	color: black;
-	text-align: center;
-	padding: 30px;
+	grid-area: about;	
 }
 
 .kompetencer {
-	grid-area: kompetencer;
+	grid-area: kompetencer;	
+}
+
+.kompetencer h1 {
+	font-size: 50px;
 }
 
 .pinkbox {
-	width: 100%;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
-}
-
-.pinkbox h1 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 50px;
-	margin-bottom: 50px;
-	margin-top: 30px;
-}
-
-.icons {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-column-gap: 5%;
-	justify-content: center;
-}
-
-.icons img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.icons p {
-	display: grid;
-	margin: 0 auto;
-	font-family: poppins;
-	text-align: center;
-	padding-bottom: 30px;
-	margin-top: 20px;
-}
-
-.portfolio {
-	justify-content: center;
-	align-items: center;
+	height: 500px;
 }
 
 .portfolio h1 {
-	font-family: poppins;
-	text-align: center;
 	font-size: 50px;
+}
+
+.icons {
+	grid-template-columns: auto auto auto;
 }
 
 .gallery {
 	display: flex;
 	flex-direction: row;
-    flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.pinkbox1 {
-	width: 100%;
-	height: 300px;
-	background-color: #FCE9F3;
-	margin: auto;
-	align-content: center;	
-	}
-
-footer h1 {
-	font-family: poppins;
-	text-align: center;
-
-}
-
-footer h2 {
-	font-family: poppins;
-	text-align: center;
-}
-
-.oplysninger p {
+.oplysninger {
 	display: grid;
 	margin: 0 auto;
 	font-family: poppins;
-	text-align: center;
+	text-align: left;
+	grid-template-columns: auto auto;
+	justify-content: space-between;
 }
-
-/*portfolio page tablet device*/
-
-.portfolio-page h1 {
-	font-family: poppins;
-	text-align: center;
-}
-
-.gallery {
-	display: flex;
-	flex-direction: column;
-	grid-template-columns: auto;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	justify-content: center;
-}
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
-}
-
 
 }
