--- a/style.css
+++ b/style.css
@@ -5,36 +5,17 @@
 
 /*mobile device*/
 
-
 .logo {
 	border: none;
-	grid-area: left;
-	margin-left: 20px;
-	margin-top: 10px;
+	margin:10px;
+
 }
 
-.wrapper {
-	max-width: 2560px;
-	display: grid;
-  	grid-gap: 10px;
-  	grid-template-columns: 1fr 1fr; 
-  
-  	grid-template-areas:
-    "header header"
-    "main main"
-    "img-me about"
-    "kompetencer kompetencer"
-    "portfolio portfolio"
-    "footer footer";
-}
-
-.wrapper > * {
-    border-radius: 5px;
-    padding: 10px;
+.logo-bea {
+	width: 50%;
 }
 
 header {
-  grid-area: header;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,20 +40,18 @@ nav ul li {
 }
 
 nav ul li a {
-	font-size: 16px;
+	font-size: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
 	text-decoration: none; /*fjerner linjen under, der viser det er et link*/
 	font-family: poppins;
 	color: black;
-	padding: 0 20px;
 	display: block; /*Gør at man ikke behøver trykke direkte på teksten, men også kan trykke udenom*/
 }
 
-nav ul li a:hover {
-	background-color: #E2DEF0;
-}
-
-main {
-	grid-area: main;
+.logo-me {
+	margin: 0 auto;
+	align-items: center;
 }
 
 main.welcomepicture {
@@ -80,6 +59,218 @@ main.welcomepicture {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	min-height: 250px;
+}
+
+.welcometext {
+	font-family: poppins;
+	color: #FE2FAC;
+	font-weight: bold;
+	text-align: center;
+	position: absolute;
+	top: 30%;
+}
+
+main ul li {
+	display: none;
+
+}
+
+.wrapper {
+	max-width: 2560px;
+	display: grid;
+  	grid-gap: 10px;
+  	grid-template-columns: 100%; 
+  
+  	grid-template-areas:
+    "img-me"
+    "about"
+    "kompetencer";
+}
+
+.wrapper > * {
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #FFFFFF;
+}
+
+.img-me {
+	grid-area: img-me;	
+}
+
+.logo-me {
+	width: 100%;
+	margin: 0 auto;
+	align-items: center;
+}
+
+.about {
+	grid-area: about;
+}
+
+.pinkbox2 {
+ 	width: 100%;
+	height: 100%;
+	background-color: #FCE9F3;
+	margin: auto;
+	align-content: center;
+	padding: 20px;
+}
+
+.about h1 {
+	font-family: poppins;
+	text-align: center;
+}
+
+.about h2 {
+	font-family: poppins;
+	text-align: center;
+	margin-top: 20px;
+}
+
+.about p {
+	font-family: poppins;
+	color: black;
+	text-align: center;
+	padding: 30px;
+}
+
+.kompetencer {
+	grid-area: kompetencer;
+}
+
+.pinkbox {
+	width: 100%;
+	background-color: #FCE9F3;
+	margin: auto;
+	align-content: center;
+	padding: 20px;
+}
+
+.pinkbox h1 {
+	font-family: poppins;
+	text-align: center;
+	margin-bottom: 50px;
+	margin-top: 30px;
+}
+
+.icons {
+	display: grid;
+	grid-column-gap: 5%;
+	justify-content: center;
+}
+
+.icons img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.icons p {
+	display: grid;
+	margin: 0 auto;
+	font-family: poppins;
+	text-align: center;
+	padding-bottom: 30px;
+	margin-top: 20px;
+	max-width: 300px;
+}
+
+.portfolio {
+	justify-content: center;
+	align-items: center;
+}
+
+.portfolio h1 {
+	font-family: poppins;
+	text-align: center;
+}
+
+.gallery {
+	display: flex;
+	flex-direction: column;
+	grid-template-columns: auto;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	justify-content: center;
+}
+
+.gallery img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.gallery img {
+	display: grid;
+	margin: 0 auto;
+}
+
+.pinkbox1 {
+	width: 100%;
+	background-color: #FCE9F3;
+	margin: auto;
+	align-content: center;	
+	padding:10px;
+	}
+
+footer h1 {
+	font-family: poppins;
+	text-align: center;
+}
+
+footer h2 {
+	font-family: poppins;
+	text-align: center;
+}
+
+.oplysninger p {
+	display: grid;
+	margin: 0 auto;
+	font-family: poppins;
+	text-align: center;
+}
+
+/*portfolio page mobile device*/
+
+.portfolio-page h1 {
+	font-family: poppins;
+	text-align: center;
+}
+
+
+/*Tablet device*/
+@media only screen and (min-width: 400px) {
+
+.welcometext {
+	top: 30%;
+	left: 30%;
+}
+}
+
+/*Desktop device*/
+@media only screen and (min-width: 800px) {
+
+.logo-bea {
+	width: 100%;
+}
+
+nav ul li a {
+	font-size: 16px;
+	padding: 0 20px;
+	
+}
+
+nav ul li a:hover {
+	background-color: #E2DEF0;
+}
+
+.wrapper {
+  	grid-template-columns: 1fr 1fr; 
+  	grid-template-areas:
+    "img-me about"
+    "kompetencer kompetencer";
+}
+
+main.welcomepicture {
 	min-height: 600px;
 }
 
@@ -90,7 +281,7 @@ main.welcomepicture {
 	font-weight: bold;
 	text-align: center;
 	position: absolute;
-  	top: 70%;
+  	top: 55%;
   	left: 50%;
 }
 
@@ -116,187 +307,58 @@ ul li a:hover {
 	background-color: #FCE9F3;
 }
 
+
 .img-me {
 	grid-area: img-me;	
 }
 
-.logo-me {
-	margin: 0 auto;
-	align-items: center;
-}
-
 .about {
-	grid-area: about;
-}
-
-.pinkbox2 {
-	width: 95%;
-	height: 90%;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
+	grid-area: about;	
 }
 
 .about h1 {
 	font-size: 50px;
-	font-family: poppins;
-	text-align: center;
-}
-
-.about h2 {
-	font-family: poppins;
-	text-align: center;
-}
-
-.about p {
-	font-family: poppins;
-	color: black;
-	text-align: center;
-	padding: 30px;
 }
 
 .kompetencer {
-	grid-area: kompetencer;
+	grid-area: kompetencer;	
+}
+
+.kompetencer h1 {
+	font-size: 50px;
 }
 
 .pinkbox {
-	width: 95%;
 	height: 500px;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
-}
-
-.pinkbox h1 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 50px;
-	margin-bottom: 50px;
-	margin-top: 30px;
-}
-
-.icons {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-column-gap: 5%;
-	justify-content: center;
-}
-
-.icons img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.icons p {
-	display: grid;
-	margin: 0 auto;
-	font-family: poppins;
-	text-align: center;
-	padding-bottom: 30px;
-	margin-top: 20px;
-}
-
-.portfolio {
-	grid-area: portfolio;
 }
 
 .portfolio h1 {
-	font-family: poppins;
-	text-align: center;
 	font-size: 50px;
+}
+
+.icons {
+	grid-template-columns: auto auto auto;
 }
 
 .gallery {
-	display: grid;
-	grid-template-columns: auto auto auto auto auto;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	justify-content: center;
-}
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
-}
-
-.pinkbox1 {
-	width: 95%;
-	height: 300px;
-	background-color: #FCE9F3;
-	margin: auto;
-	padding: 20px;
-	align-content: center;
-}
-
-footer {
-  grid-area: footer;
-}
-
-footer h1 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 50px;
-}
-
-footer h2 {
-	font-family: poppins;
-	text-align: center;
-	margin-bottom: 20px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
 .oplysninger {
 	display: grid;
-	grid-template-columns: auto auto;
-	grid-column-gap: 5%;
-		
-}
-
-.kontaktoplysninger {
-	justify-content: left;
-}
-
-.socialmedia {
-	justify-content: right;
-}
-
-.oplysninger p {
-	display: grid;
 	margin: 0 auto;
 	font-family: poppins;
 	text-align: left;
+	grid-template-columns: auto auto;
+	justify-content: space-between;
 }
 
-
-	
-
-
-
-
-
-
-/*Ny side - portfolio*/
+/*portfolio page mobile device*/
 
 .portfolio-page h1 {
-	font-family: poppins;
-	text-align: center;
-	font-size: 70px;
-	margin-bottom: 50px;
-}
-
-.gallery {
-	display: grid;
-	grid-template-columns: auto auto auto auto auto;
-	grid-column-gap: 20px;
-	grid-row-gap: 10px;
-	justify-content: center;
-	margin-bottom: 70px;
-}
-
-.gallery img {
-	display: grid;
-	margin: 0 auto;
+	font-size: 50px;
 }
 
 }
