--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@ nav ul li a {
 }
 
 main.welcomepicture {
-	background-image: url('../IMG/skrivebord3.jpg');
+	background-image: url('../IMG/skrivebord4.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -64,7 +64,7 @@ main.welcomepicture {
 
 .welcometext {
 	font-family: poppins;
-	color: #FE2FAC;
+	color: #482980;
 	font-weight: bold;
 	text-align: center;
 	position: absolute;
@@ -136,12 +136,13 @@ main ul li {
 
 .kompetencer {
 	grid-area: kompetencer;
+	margin-top: 20px;
 }
 
 .pinkbox {
 	width: 100%;
 	background-color: #FCE9F3;
-	margin: auto;
+	margin: 20px;
 	align-content: center;
 	padding: 20px;
 }
@@ -182,6 +183,7 @@ main ul li {
 .portfolio h1 {
 	font-family: poppins;
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 .gallery {
@@ -209,6 +211,7 @@ main ul li {
 	padding:10px;
 	}
 
+
 footer h1 {
 	font-family: poppins;
 	text-align: center;
@@ -226,12 +229,29 @@ footer h2 {
 	text-align: center;
 }
 
+.socialmedia {
+	text-align: center;
+}
+
+
+.fab {
+	font-size: 30px;
+	color: #482980;
+}
+
+.fab:hover{
+	font-size: 30px;
+	color: #FFFFFF;
+}
+
 /*portfolio page mobile device*/
 
 .portfolio-page h1 {
 	font-family: poppins;
 	text-align: center;
+	margin: 20px;
 }
+
 
 /*Tablet device*/
 @media only screen and (min-width: 400px) {
@@ -361,7 +381,7 @@ ul li a:hover {
 	padding-right: 30px;
 }
 
-/*portfolio page mobile device*/
+/*portfolio page desktop device*/
 
 .portfolio-page h1 {
 	font-size: 50px;
