--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,9 +67,13 @@ main.welcomepicture {
 	color: #482980;
 	font-weight: bold;
 	text-align: center;
-	position: absolute;
-	top: 30%;
+	display: grid;
+	margin: 0 auto;
+	padding-top: 60px;
+	padding-left: 70px;
 }
+
+
 
 main ul li {
 	display: none;
@@ -258,11 +262,6 @@ footer h2 {
 
 /*Tablet device*/
 @media only screen and (min-width: 400px) {
-
-.welcometext {
-	top: 20%;
-	left: 30%;
-}
 
 .oplysninger {
 	display: grid;
